<resources>
    <string name="app_name">Knots and Crosses</string>


    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">Zxzro8jMMi</string>

    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="knots_and_crosses">Knots and Crosses</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player name</string>
    <string name="player_id">Game ID:</string>
    <string name="game_id">Game ID</string>
    <string name="players">Players:</string>
    <string name="player_ids">Player IDs</string>
    <string name="go_back">Go back</string>
    <string name="player_win_id">Player ID</string>
    <string name="gameIdStatus">"Game ID : "</string>
    <string name="victory">Victory!</string>
    <string name="yourMove">Your move</string>
</resources>