<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.uia.ikt205.thgame.GameActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_id"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_id"
        />

    <TextView
        android:id="@+id/game_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/player_name"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/text"
        />

    <TextView
        android:id="@+id/players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/players"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/game_id"
        app:layout_constraintBottom_toTopOf="@id/game_id"
        />

    <TextView
        android:id="@+id/players_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/player_ids"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/players"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/players_id">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/null_null"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/null_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/null_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one_null"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/one_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/one_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/two_null"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/two_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/two_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="20pt"
                android:backgroundTint="#00BCD4"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>